<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mm"
    android:gravity="center"
    android:padding="@dimen/menubuttonspadding"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    >
    <TextView
        android:id="@+id/hamaryBazurg"
        android:text="@string/hamarybazurg"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/menu_border"
        android:layout_width="@dimen/menubuttonwidth"
        android:layout_height="@dimen/menubuttonheight"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/menumaringtopbutton"
        />
    <TextView
        android:id="@+id/sabaqAmoz"
        android:text="@string/sabaqamooz"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/menu_border"
        android:layout_width="@dimen/menubuttonheight"
        android:layout_height="@dimen/menubuttonwidth"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/menumaringtopbutton"/>
    <TextView
        android:id="@+id/hamaraMuashra"
        android:text="@string/hamaramuashra"
        android:gravity="center"
        android:background="@drawable/menu_border"
        android:layout_width="@dimen/menubuttonwidth"
        android:layout_height="@dimen/menubuttonheight"
        android:textStyle="bold"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/islamiWaqyat"
        android:text="@string/islamiwaqyat"
        android:gravity="center"
        android:background="@drawable/menu_border"
        android:layout_width="@dimen/menubuttonwidth"
        android:layout_height="@dimen/menubuttonwidth"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/aapBeeti"
        android:text="@string/aapbeeti"
        android:gravity="center"
        android:background="@drawable/menu_border"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:textStyle="bold"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/menumaringtopbutton"
        />

    <TextView
        android:id="@+id/safarNama"
        android:text="@string/safarnamay"
        android:gravity="center"
        android:background="@drawable/menu_border"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:textStyle="bold"
        android:padding="13dp"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/menumaringtopbutton"
        />
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:menu_fab_size="mini"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="3dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="1dp"
        fab:menu_colorNormal="@color/appcolordark"
        fab:menu_colorPressed="@color/appcolor"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="70"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="15sp"
        fab:menu_labels_cornerRadius="5dp"
        fab:menu_labels_colorNormal="#444444"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="right"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_fab_label=""
        android:layout_alignParentBottom="true"
        >

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/share_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            fab:fab_size="mini"
            fab:fab_label="Share app" />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/feedback_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_feedback"
            fab:fab_size="mini"
            fab:fab_label="Feedback" />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_about"
            fab:fab_size="mini"
            fab:fab_label="About Us" />

    </com.github.clans.fab.FloatingActionMenu>


</RelativeLayout>